--- a/data/remoteFixes.css
+++ b/data/remoteFixes.css
@@ -1,29 +1,9 @@
 /* this file used to fix css bugs without uploading the extension to google on each problem */
 
-/* fix for v 4.1.0.1 */
-:root #rbx-body .btn-common-play-game-lg span.icon-common-play {
-	background-position: 0 0;
+/* fix for v 4.1.0.2 */
+html body.dark-theme {
+	--rbx-theme-txt-sec-color: #bdbebe;
 }
-
-
-/* makes roblox credit next to robux */
-:root .btn-navigation-nav-robux-md {
-	display: flex;
+html body.light-theme {
+	--rbx-theme-txt-sec-color: #7f7f7f;
 }
-
-/* fix homepage people overlaping with games */
-body .section .people-list {
-	overflow: hidden;
-}
-
-/* force fix page being thin */
-[data-internal-page-name="Home"] #container-main > div.content {
-	max-width: 100%;
-	min-width: unset;
-	width: min(1336px, 100%) !important;
-}
-/* #HomeContainer {
-	max-width: 100%;
-	min-width: unset;
-	width: min(970px, 100%) !important;
-} */
