better spacing for discover page

--- a/roblokis/js/Theme/Pages/discover.css
+++ b/roblokis/js/Theme/Pages/discover.css
@@ -48,3 +48,9 @@
 .rbx-body .game-grid.home-game-grid.expand-home-content {
 	padding: 8px;
 }
+
+.rbx-body .game-grid.expand-home-content {
+	grid-column-gap: 4px;
+	grid-row-gap: 0px;
+	justify-content: space-evenly;
+}
