fix: Update 3 pages
avatar, shop item, profile pages

--- a/roblokis/js/Theme/Pages/all.css
+++ b/roblokis/js/Theme/Pages/all.css
@@ -420,7 +420,7 @@ body.light-theme {
 
 
 /* custimize sections for game cards & friends */
-div > .game-carousel, .game-grid, .game-cards {
+div > .game-carousel, .game-grid, *:not(.game-grid) > .game-cards {
 	border-radius: var(--rk-gamesection-corners-radius, 8px);
 
 	border-color: var(--rk-gamesection-borders-color);
